# rust-planet-gen

./: Cargo.toml
src/: main.rs  mod.rs
src/coordinates/: cartesian_coord.rs  fibonacci_sphere.rs  mod.rs  spherical_coord.rs
src/rng/: mod.rs
