[package]
name = "planet_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_seeder = "0.2.2"
rand_pcg = "0.3.1"

[dev-dependencies]
assert_approx_eq = "1.1.0"
pretty_assertions = "1.0.0"